--- a/index.html
+++ b/index.html
@@ -10,60 +10,32 @@
 </head>
 
 <body>
+
+  <center><h2> Hey there!!<br> I'm very busy in upcoming days so,<br> have no time to text or WhatsApp you all Please check here.<br> If i'm available or not. </h2></center>
+
     <div class="box-container">
-        <div class="box-item">
-            <div class="flip-box">
-                <div class="flip-box-front text-center" style="background-image: url('https://s25.postimg.cc/frbd9towf/cta-2.png');">
-                    <div class="inner color-white">
-                        <h3 class="flip-box-header">Custom Domains</h3>
-                        <p>A short sentence describing this callout is.</p>
-                        <img src="https://s25.postimg.cc/65hsttv9b/cta-arrow.png" alt="" class="flip-box-img">
-                    </div>
-                </div>
-                <div class="flip-box-back text-center" style="background-image: url('https://s25.postimg.cc/frbd9towf/cta-2.png');">
-                    <div class="inner color-white">
-                        <h3 class="flip-box-header">Custom Domains</h3>
-                        <p>A short sentence describing this callout is.</p>
-                        <button class="flip-box-button">Learn More</button>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="box-item">
             <div class="flip-box">
                 <div class="flip-box-front text-center" style="background-image: url('https://s25.postimg.cc/hj4c4qnov/cta-3.png');">
                     <div class="inner color-white">
-                        <h3 class="flip-box-header">Never Sleeps</h3>
-                        <p>A short sentence describing this callout is.</p>
+                        <h3 class="flip-box-header">Check Status</h3>
+                        <p>Click me to check the Status</p>
                         <img src="https://s25.postimg.cc/65hsttv9b/cta-arrow.png" alt="" class="flip-box-img">
                     </div>
                 </div>
                 <div class="flip-box-back text-center" style="background-image: url('https://s25.postimg.cc/hj4c4qnov/cta-3.png');">
                     <div class="inner color-white">
-                        <h3 class="flip-box-header">Never Sleeps</h3>
-                        <p>A short sentence describing this callout is.</p>
-                        <button class="flip-box-button">Learn More</button>
+                        <h3 class="flip-box-header">Not Available</h3>
+                        <p>In case of any other thing please (WhatsApp) me</p>
+                        <button class="flip-box-button" onclick="window.location.href = 'https://wa.me/916263413619';"><img src="https://static.whatsapp.net/rsrc.php/ym/r/36B424nhiL4.svg" alt=""></button>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="box-item">
-            <div class="flip-box">
-                <div class="flip-box-front text-center filter-" style="background-image: url('https://s25.postimg.cc/l2q9ujy4f/cta-4.png');">
-                    <div class="inner color-white">
-                        <h3 class="flip-box-header">Dedicated</h3>
-                        <p>A short sentence describing this callout is.</p>
-                        <img src="https://s25.postimg.cc/65hsttv9b/cta-arrow.png" alt="" class="flip-box-img">
-                    </div>
-                </div>
-                <div class="flip-box-back text-center" style="background-image: url('https://s25.postimg.cc/l2q9ujy4f/cta-4.png');">
-                    <div class="inner color-white">
-                        <h3 class="flip-box-header">Dedicated</h3>
-                        <p>A short sentence describing this callout is.</p>
-                        <button class="flip-box-button">Learn More</button>
-                    </div>
-                </div>
-            </div>
+        <div>
+            <center>
+                <button class="flip-box-button" style="background-color: #f27c89;">Click to Reset</button>
+            </center>
         </div>
     </div>
 </body>
