--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             </center>
         </div>
     </div>
+    <div id="footer">
+       <center> <h4>Message by Abhishek Pal</h4> </center>
+    </div>
 </body>
 
 </html>
