--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-  <center><h2> Hey there!!<br> I'm very busy in upcoming days so,<br> have no time to text or WhatsApp you all Please check here.<br> If i'm available or not. </h2></center>
+  <center><h2> Hey there!!<br> I'm very busy in upcoming days so,<br> have no time to text or WhatsApp you all Please check here,<br> If i'm available or not. </h2></center>
 
     <div class="box-container">
         <div class="box-item">
